Resolve merge conflits